# Adrastea

./: Cargo.toml  README.md
assets/: adrastea.conf  adrastea.service
migrations/2023-02-08-185109_articles/: up.sql
src/: data.rs  main.rs  schema.rs  service.rs  settings.rs
