[package]
name = "adrastea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
rss = "2.0.1"
reqwest = "0.11.13"
diesel = "2.0.2"
clap = { version = "4.0.23", features = ["derive"] }
