[package]
name = "adrastea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
rss = "2.0.1"
reqwest = {version = "0.11.13"}
tokio = {version = "1", features = ["full"]}
diesel = {version = "2.0.2", features = ["sqlite", "postgres", "mysql"]}
diesel_migrations = "2.0.0"
sha2 = "0.10.5"
